2020-12-27  7.0.10-54  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-54 GIT revision 18...

2020-12-27  7.0.10-54  Dirk Lemstra <dirk@lem.....org>
  * replaced jxl coder with an implementation that uses the jpeg-xl reference
    library.

2020-12-25  7.0.10-54  <quetzlzacatenango@image...>
  * enable reading of a certain grayscale TIFF image.
  * support HEIC depth masks (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3040).
  * validate pixel cache offsets (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=29039).

2020-12-24  7.0.10-53  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-53 GIT revision 18083:3b141f557:20201224

2020-12-20  7.0.10-53  <quetzlzacatenango@image...>
  * CSS colors no longer require commas.
  * eliminate possible arthimetic overflow (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=28849)
  * support display-p3, Adobe-98, and Pro-photo colorspaces
  * read/write 1024 colors Sixel images (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3018).

2020-12-19  7.0.10-52  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-52 GIT revision 18057:1f5bab30b:20201219

2020-12-19  7.0.10-52  <quetzlzacatenango@image...>
  * return alpha bytes with stream utility (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2862).
  * percentage -border in x no longer adds one pixel border in y (reference
    https://github.com/ImageMagick/ImageMagick/issues/2978).

2020-12-18  7.0.10-51  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-51 GIT revision 18052:475508769:20201218

2020-12-17  7.0.10-51  <quetzlzacatenango@image...>
  * reduce time to identify PDF/PS/XPS/PCL image width/height (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2993).

2020-12-16  7.0.10-50  <quetzlzacatenango@image...>